--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="style.css">
     <title>Index</title>
 </head>
+
 <body>
-    
+    <div class="">
+        <h1 class="ms-5 pt-3">to<strong>Do</strong></h1><br>
+        <form action="" class="ms-5">
+            <input type="text" placeholder="Enter your task" class="w-75">  <input type="submit" value="Add" class="ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">
+        </form><br><br>
+
+        <section>
+            <h3 class="fw-bold ms-5">Tasks</h3>
+            <table class="ms-5">
+                <thead>
+                    <th>List Tasks</th>
+                    <th>Actions</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>
+                        </td>
+                    </tr>
+                </tbody>
+                
+            </table>
+        </section>
+    </div>
 </body>
 </html>
