--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <div class="">
+    <div>
         <h1 class="ms-5 pt-3">to<strong>Do</strong></h1><br>
         <form action="" class="ms-5" >
             <input type="text" placeholder="Enter your task" class="w-75" id="text">  <input type="submit" value="Add" id="btnsubmit"  class="ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">
         </form><br><br>
 
-        <section>
+        <section class="container ">
             <h3 class="fw-bold ms-5">Tasks</h3>
-            <table class="ms-5">
+            <table class="table table-hover table-borderless table-dark text-white ms-5 w-75">
                 <thead>
-                    <th>List Tasks</th>
+                    <th>List Tasks</th> 
                     <th>Actions</th>
                 </thead>
                 <tbody id="taskList" class="text-white">
@@ -29,7 +29,7 @@
             </table>
         </section>
     </div>
-     <script src="index.js"></script>
 
+    <script src="index.js"></script>
 </body>
 </html>
