--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <div>
+    <div id="div">
         <h1 class="ms-5 pt-3">to<strong>Do</strong></h1><br>
+        <button id="btnClear" class="ms-5 ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">Actualiser</button> <span class="ms-5">Changer de mode:<button id="btnmode" class="rounded-5 p-1 ">White</button></span class="ms-5">
         <form action="" class="ms-5" >
             <input type="text" placeholder="Enter your task" class="w-75" id="text">  <input type="submit" value="Add" id="btnsubmit"  class="ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">
         </form><br><br>
 
         <section class="container ">
             <h3 class="fw-bold ms-5">Tasks</h3>
-            <table class="table table-hover table-borderless table-dark text-white ms-5 w-75">
+            <table id="table" class="table table-hover table-borderless table-dark text-white ms-5 w-75">
                 <thead>
                     <th>List Tasks</th> 
                     <th>Actions</th>
