--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <input type="text" placeholder="Enter your task" class="w-75" id="text">  <input type="submit" value="Add" id="btnsubmit"  class="ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">
         </form><br><br>
 
-        <section class="container ">
+        <section class="container table-responsive">
             <h3 class="fw-bold ms-5">Tasks</h3>
-            <table id="table" class="table table-hover table-borderless table-dark text-white ms-5 w-75">
+            <table id="table" class="table table-hover table-borderless table-dark text-white ">
                 <thead>
                     <th>List Tasks</th> 
                     <th>Actions</th>
