--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="div">
         <h1 class="ms-5 pt-3">to<strong>Do</strong></h1><br>
-        <button id="btnClear" class="ms-5 ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">Actualiser</button> <span class="ms-5">Changer de mode:<button id="btnmode" class="rounded-5 p-1 ">White</button></span>
+        <button id="btnClear" class="ms-5 ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">Refresh</button> <span class="ms-5">Change mode:<button id="btnmode" class="rounded-5 p-1 ">White</button></span>
         <form action="" class="ms-5" >
             <input type="text" placeholder="Enter your task" class="w-75" id="text">  <input type="submit" value="Add" id="btnsubmit"  class="ps-4 pe-4 rounded-4 text-white fs-5 fw-bold">
         </form><br><br>
